--- a/styles.css
+++ b/styles.css
@@ -74,8 +74,13 @@ button {
     color: white;
 }
 
-.numbers:hover {
+.numbers:hover, #decimal:hover {
     filter: brightness(150%);
+}
+
+#decimal {
+    background-color:rgb(47, 47, 47);
+    color: white;
 }
 
 .operators {
